  Entity.getInt() renamed to getInteger(), getChar() renamed to getCharacter(), for consistency
  EntityUtil, renamed a few methods in accordance with recent changes
  Properties.booleaProperty(propertyID, columnType) added
  InputProviderPanel, ESC key now works like clicking the cancel button
  InpurProviderPanel generified and improved a bit
  NumberField bug fixed, field did not accept the minus sign
  SizedDocument no longer allows use of setDocumentFilter(), setDocumentFilterInternal() added for subclasses
  SizedDocument now uses DocumentCase enum for controlling case conversion
  EntityConnectionProvider.ConnectionWrapper removed along with EntityConnectionProviders.connectionProvider(EntityConnection)
  Entity.Definition.setTableName() added
  DefaultEntityApplicationModel.loadDomainModel() now throws ClassNotFoundException
  EntityConnection.Type enum added along with EntityConnection.getType() and EntityConnectionProvider.getConnectionType()
  DefaultEntityConnectionServerAdmin, error handling on startup improved
  LocalEntityConnection.getSelectSQL() improved, no need to check if queries created by the framework contain the where keyword
  Entity.Definition.setSelectQuery(), added containsWhereClause parameter
  Entities.selectQueryContainsWhereClause() added
  LocalEntityConnection.containsWhereClause() removed, now uses the above
  DefaultEntityLookupModel, added parameter validation
  DefaultEntityDefinition.initializeSelectColumnsString() bug fixed, did not use getColumnName() when constructing query
0.9.10
  Entity.Data and Property.Data annotations added for database specific entity information, such as table and column names
  Refactoring due the above
  Entity.Definition.setSelectQuery(selectQuery) added as deprecated for backwards compatibility
  Demo deployment process improved
  UiUtil.chooseFileToSave() renamed to selectFileToSave() for consistency
  States.AggregateStateListener bug fixed, incorrect new value reported, test added