@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.0" xmlns:m="http://ant.apache.org/ivy/maven">
-  <info organisation="org.jminor" module="jminor-common-model" revision="0.9.7" status="integration" publication="20151012151803"/>
+  <info organisation="org.jminor" module="jminor-common-model"/>
 
   <configurations defaultconfmapping="runtime">
     <conf name="runtime"/>
