@@ -4190,3 +4190,4 @@
   Demo deployment process improved
   UiUtil.chooseFileToSave() renamed to selectFileToSave() for consistency
   States.AggregateStateListener bug fixed, incorrect new value reported, test added
+  EntityUtil.getEntity() refactored from DefaultEntityEditModel.getDefaultEntity()
